# tacrust

./: .codecov.yml  .gitignore  .strata.yml  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  Makefile.toml  README.md  build.rs  build.sh  tacrust.spec  test.sh
packets/: sample_acct.pcapng  sample_auth.pcapng  sample_author.pcapng  sample_packet_4  sample_packet_acct_reply  sample_packet_acct_request  sample_packet_authen_continue  sample_packet_authen_reply  sample_packet_authen_start  sample_packet_author_reply  sample_packet_author_request  shrubbery_author_response
pip/: requirements.txt
sfdc_metadata/cred_scan_triage/: triage.yaml
src/: hash.rs  lib.rs  parser.rs  pseudo_pad.rs  serializer.rs  tacacs_codec.rs
tacrustd/: Cargo.toml  Makefile.toml  tac_plus.conf  tacrust.json  tacrust.toml
tacrustd/packets/: alexdelarge_author_raccess.tacacs  davebowman_author_carwash.tacacs  faramir_authen_cont.tacacs  faramir_authen_start.tacacs  faramir_author_carwash.tacacs  faramir_author_carwash_tackey2.tacacs  golang-authen-1.tacacs  golang-authen-2.tacacs  jackdoe_author_raccess.tacacs  jacktorrance_author_carwash.tacacs  janedoe_author_some_service.tacacs  java-author-1.tacacs  johndoe_author_some_service.tacacs  strider_author_carwash.tacacs
tacrustd/packets/ciena-waveserver/: 01.a-authen-start-good.tacacs  01.b-authen-cont-good.tacacs  02.a-author-shell-file-ls-good.tacacs  02.b-author-shell-good.tacacs
tacrustd/packets/cisco-nexus-9000/: steps.txt
tacrustd/packets/cisco-nexus-9000/aditya/: 01.a-authen-start-bad.tacacs  01.b-authen-cont-bad.tacacs  02.a-authen-start-good.tacacs  02.b-authen-cont-good.tacacs  03.a-author-shell-good.tacacs  03.b-author-shell-show-run-good.tacacs  04-author-shell-show-version-good.tacacs  05-author-shell-show-interface-good.tacacs  06-author-shell-show-clock-bad.tacacs  07-author-shell-dir-root-good.tacacs  08-author-shell-dir-home-good.tacacs
tacrustd/packets/cisco-nexus-9000/kamran/: 01.a-authen-start-good.tacacs  01.b-authen-cont-good.tacacs  02.a-author-shell-good.tacacs  02.b-author-shell-show-run-bad.tacacs  03-author-shell-show-version-bad.tacacs  04-author-shell-show-interface-bad.tacacs  05-author-shell-show-clock-good.tacacs  06-author-shell-dir-root-good.tacacs  07-author-shell-dir-home-good.tacacs
tacrustd/packets/f5-lb/: 01-authen-good.tacacs  02-author-good.tacacs
tacrustd/packets/fortigate-firewall/: 01.a-authen-start-good.tacacs  01.b-authen-cont-good.tacacs  02-author-good.tacacs
tacrustd/packets/golang-emulate-wda/: golang-authen-cont-password-kamran.tacacs  golang-authen-cont-username-kamran.tacacs  golang-authen-start-no-username.tacacs
tacrustd/packets/juniper-firewall/: 01-author-good.tacacs
tacrustd/packets/mrv-lx/: 01.a-authen-start-good.tacacs  01.b-authen-cont-good.tacacs  02-author-good.tacacs
tacrustd/packets/opengear-console/: 01.a-authen-start-good.tacacs  01.b-authen-cont-good.tacacs  02-author-good.tacacs
tacrustd/src/: client.rs  main.rs  state.rs  tacacs.rs  tests.rs
tests/: codec_tests.rs  hash_tests.rs  parser_tests.rs
