[workspace]

members = [
    ".",
    "tacrustd",
]

[package]
name = "tacrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.0"
byteorder = "1.4.3"
md5 = "0.7.0"
nom = "7.1.0"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
pretty-hex = "0.2.1"
simple-error = "0.2.3"
rand = "0.8.4"
rust-argon2 = "1.0.0"
tempfile = "3.8.1"
pwhash = "1.0.0"

tokio-util = { version = "0.6.9", features = ["full"] }
