[package]
name = "tacrustd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tacrust = { path = ".." }
clap = { version = "3.0.1", features = ["derive"] }
color-eyre = { version = "0.5.11" }
tokio = { version = "1.9.0", features = ["full"] }
tracing = { version = "0.1.26" }
tracing-subscriber = { version = "0.2.19" }
figment = { version = "0.10.6", features = ["test", "env", "toml"] }
serde = { version = "1.0.133", features = ["derive"] }

