[package]
name = "tacrustd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tacrust = { path = ".." }
clap_rs = { version = "2.33.3", package = "clap" }
color-eyre = { version = "0.5.11" }
tokio = { version = "1.9.0", features = ["full"] }
tracing = { version = "0.1.26" }
tracing-subscriber = { version = "0.2.19" }
figment = { version = "0.10.6", features = ["test", "env", "toml"] }
serde = { version = "1.0.133", features = ["derive"] }
twelf = { version = "0.1.7" }
futures = { version = "0.3.19" }
tokio-stream = { version = "0.1.8" }
tokio-util = { version = "0.6.9" }
simple-error = { version = "0.2.3" }
pam = { version = "0.7.0" }
regex = { version = "1.5.4" }
rand = { version = "0.8.4" }
lazy_static = { version = "1.4.0" }

